[metadata]
# This includes the license file in the wheel.
license_file = LICENSE

[pytype]
inputs = bbrl_gymnasium

[flake8]
max-line-length = 88
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = E203
# Ignore import not used when aliases are defined
per-file-ignores =
	./bbrl_gymnasium/__init__.py:F401
	./bbrl_gymnasium/env/__init__.py:E402
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__,
    # Don't check the doc
    docs/
    # This contains our built documentation
    build,
    # This contains builds of flake8 that we don't want to check
    dist
		*.egg-info
max-complexity = 15

[isort]
profile = black
line_length = 127
src_paths = bbrl_gymnasium
